clant (1.0.1) unstable;

  * Avoid running tools on sources in the build directory
  * Fix the jobs command line parameter
  * Print a warning when include-what-you-use fails
  * Print quoted includes first
  * Print the context of clang-tidy errors

 -- David Robillard <d@drobilla.net>  Tue, 15 Dec 2020 18:51:59 +0000

clant (1.0.0) stable;

  * Initial release

 -- David Robillard <d@drobilla.net>  Sun, 13 Dec 2020 19:00:30 +0000