@@ -5,8 +5,9 @@ clant (1.0.1) unstable;
   * Print a warning when include-what-you-use fails
   * Print quoted includes first
   * Print the context of clang-tidy errors
+  * Use include mapping files when checking extra headers
 
- -- David Robillard <d@drobilla.net>  Tue, 15 Dec 2020 18:51:59 +0000
+ -- David Robillard <d@drobilla.net>  Sat, 19 Dec 2020 10:49:59 +0000
 
 clant (1.0.0) stable;
 
